fix(tests): remove unused activityRepo mock and fix Javadoc blank lines
Remove dead BpmnActivityRepository mock from ProcessInstanceServiceTestBase
— field was assigned but never accessed since ProcessInstanceService does
not declare that dependency. Replace List.get(0) with List.getFirst()
throughout service and test classes (Java 21). Fix blank lines in Javadoc
block that IntelliJ flagged as ignored.